--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
   },
   "devDependencies": {
     "eslint-plugin-prettier": "^4.0.0"
+  },
+  "resolutions": {
+    "@types/react": "16.14.25",
+    "@types/react-dom": "16.9.15"
   }
 }
