--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "my-app",
+  "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "@types/jest": "24.9.1",
+    "@types/node": "17.0.29",
+    "@types/react": "16.14.25",
+    "@types/react-dom": "16.8.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^4.0.1",
-    "typescript": "^4.0.1"
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-scripts": "4.0.2",
+    "typescript": "4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +50,7 @@
   "resolutions": {
     "@types/react": "16.14.25",
     "@types/react-dom": "16.9.15"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
